--- a/CSS/welcomePage.css
+++ b/CSS/welcomePage.css
@@ -1,15 +1,38 @@
 .welcomePageWrapper{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 .welcomePagePicture{
     height: 40vh;
     width: 100vw;
     background-color: rgb(192, 192, 192);
 }
+.welcomePageContentContainer{
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+}
+.loginRegisterButtonContainer{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-self: flex-end;
+    gap: 10px;
+}
 .loginButton{
     flex-grow: 1;
     background-color: rgb(192, 192, 192);
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+}
+.registerButton{
+    flex-grow: 1;
+    background-color: rgb(192, 192, 192);
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
 }
