--- a/CSS/register.css
+++ b/CSS/register.css
@@ -1,4 +1,23 @@
 .registerPageWrapper{
     height: 100%;
     width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+main{
+    height: 100vh;
+}
+#registrationForm{
+    grid-row: span 2;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.registerBox{
+    width: 100%;
+    border: none;
+    border-bottom: solid 1px black;
+    
 }
