--- a/CSS/home.css
+++ b/CSS/home.css
@@ -5,3 +5,33 @@
     padding: 10px;
     border-radius: 10px;
 }
+
+.bg-home {
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url('../images/bg-home.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.home-welcome {
+    border-left: 2px solid var(--color-white);
+    padding-left: 10px;
+    margin: 500px 10px 0;
+}
+
+.home-welcome h1 {
+    color: var(--color-white);
+}
+
+.home-welcome p {
+    color: var(--color-grey);
+}
+
+.awards {
+    padding-bottom: 100px;
+    box-sizing: border-box;
+    background-color: var(--color-black);
+    color: var(--color-white);
+
+}
+
