--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,10 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     width: 100vw;
+    height: auto;
     margin: 0;
 }
 
@@ -37,4 +42,10 @@ button {
     display: inline-block;
     cursor: pointer;
     background-color: transparent;
+}
+
+:root {
+  --color-white: rgb(255, 255, 255);
+  --color-black: rgb(0, 0, 0);
+  --color-grey: rgb(158, 158, 158);
 }
