--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -5,8 +5,12 @@
 .welcomePagePicture{
     height: 40vh;
     width: 100vw;
-    background-color: rgb(192, 192, 192);
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url('../images/bg-welcome.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
 .welcomePageContentContainer{
     padding: 20px;
     width: 100%;
