--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -1,45 +1,75 @@
-.welcomePageWrapper{
+.welcome-container {
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.blurred-background {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-}
-.welcomePagePicture{
-    height: 40vh;
-    width: 100vw;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url('../images/bg-welcome.png');
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent),url('../images/bg-welcome.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    filter: blur(5px);
+    z-index: -1;
+    transform: scale(1.1);
 }
 
-.welcomePageContentContainer{
+.welcome-text {
+    z-index: 1;
     padding: 20px;
-    width: 100%;
+}
+
+.web-title {
+    height: 20vh;
+}
+
+.welcome-content {
+    height: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-sizing: border-box;
+    justify-content: center;
 }
-.button:hover{
-    cursor: pointer;
+
+.welcome-content p {
+    text-align: center;
 }
-.loginRegisterButtonContainer{
+
+.welcome-buttons {
+    height: 40vh;
+    width: 100%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-self: flex-end;
     gap: 10px;
+    background-color: rgb(11, 19, 18);
+    padding: 20px;
+    margin-bottom: -20px;
 }
-.loginButton{
-    flex-grow: 1;
-    background-color: rgb(192, 192, 192);
+
+.login-button,
+.register-button {
     text-align: center;
     padding: 10px;
     border-radius: 10px;
+    color: white;
+    background-color: rgb(43, 43, 43);
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.registerButton{
-    flex-grow: 1;
-    background-color: rgb(192, 192, 192);
-    text-align: center;
-    padding: 10px;
-    border-radius: 10px;
+
+.login-button:hover,
+.register-button:hover {
+    background-color: darkgray;
 }
