--- a/CSS/index.css
+++ b/CSS/index.css
@@ -41,6 +41,8 @@ header, main, nav {
 input {
     border: none;
     border-bottom: 1px solid var(--color-grey);
+    background-color: transparent;
+    outline: none;
 }
 
 button {
