--- a/CSS/register.css
+++ b/CSS/register.css
@@ -14,7 +14,13 @@ main{
     flex-direction: column;
     gap: 20px;
 }
-.registerBox{
+.registrationForm input {
+    border: none;
+    border-bottom: 1px solid var(--color-grey);
+    margin: 10px 0;
+    padding-bottom: 10px;
+}
+
     width: 100%;
     border: none;
     border-bottom: solid 1px black;
