--- a/CSS/myTeams.css
+++ b/CSS/myTeams.css
@@ -1,7 +1,13 @@
+.teams {
+  display: flex;
+  flex-direction: column;
+}
+
 .team {
   background-color: var(--color-black);
   padding: 20px;
   margin: 20px;
+  text-align: left;
 }
 
 .team-info {
