--- a/CSS/home.css
+++ b/CSS/home.css
@@ -7,7 +7,7 @@
 }
 
 .bg-home {
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url('../images/bg-home.png');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)), url('../images/bg-home.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
