--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,7 @@
   --color-black: rgb(0, 0, 0);
   --color-grey: rgb(158, 158, 158);
   --color-background: rgb(24, 24, 24);
+  --color-nav: rgb(12, 12, 12);
 }
 
 * {
