--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -13,3 +13,22 @@
     width: 30%;
     border-radius: 15px;
 }
+.backgroundPictureProfile{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.inputBox{
+    display: flex;
+    align-content: flex-end;
+    justify-content: flex-end;
+    border-bottom: 2px solid black;
+}
+.editBox{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
