--- a/CSS/index.css
+++ b/CSS/index.css
@@ -52,3 +52,21 @@ button {
     font-size: inherit;
 }
 
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.popupContent{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: rgb(0, 0, 0);
+  padding: 20px;
+  transform: translate(-50%, -50%);
+}
