--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,3 +1,7 @@
+.profilePageWrapper{
+    padding: 20px;
+    box-sizing: border-box;
+}
 .profileButtons{
     display: flex;
     gap: 10px;
@@ -35,8 +39,28 @@
 .settingsInput{
     width: 100%;
 }
+
 .settingsButton{
     background-color: rgb(29, 29, 29);
     width: 100%;
-padding: 10px;
+    padding: 10px;
+    grid-row: 6;
+}
+.inputContent{
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 2fr 2fr 1fr 2fr 1fr;
+}
+.inputOrder1{
+    grid-row: 3;
+}
+
+.inputOrder2{
+    grid-row: 4;
+}
+.settingsErrorMessage{
+    grid-row: 5;
+    color: rgb(151, 16, 16);
 }
