--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -24,6 +24,11 @@
     justify-content: center;
     align-items: center;
 }
+.settingsContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 .inputBox{
     display: flex;
     align-content: flex-end;
@@ -44,23 +49,28 @@
     background-color: rgb(29, 29, 29);
     width: 100%;
     padding: 10px;
-    grid-row: 6;
+    grid-row: 8;
+    border-radius: 5px;
 }
 .inputContent{
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 2fr 2fr 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 0.5fr 1.5fr 1.5fr 1fr;
 }
 .inputOrder1{
     grid-row: 3;
 }
 
 .inputOrder2{
-    grid-row: 4;
+    grid-row: 5;
 }
 .settingsErrorMessage{
-    grid-row: 5;
+    font-size: 12px;
+    grid-row: 7;
     color: rgb(151, 16, 16);
+}
+.changePicture{
+    visibility: hidden;
 }
