--- a/CSS/createNewGroup.css
+++ b/CSS/createNewGroup.css
@@ -47,7 +47,13 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 50px;
+  height: 42px;
+  background-color: rgb(72, 72, 72);
+  color: var(--color-grey);
+  border-radius: 6px;
+  font-size: 16px;
+  padding-left: 14px;
+  margin-top: 5px;
 }
 
 .new-group-member::placeholder  {
@@ -73,12 +79,35 @@
   padding: 20px;
 }
 
+.dropdown-list {
+  margin-top: 5px;
+}
+
 .dropdown-option {
   padding: 8px;
   cursor: pointer;
   background-color: rgb(72, 72, 72);
+  width: 90%;
 }
 
 .dropdown-option:hover {
   background-color: rgb(162, 162, 162);
+}
+
+.group-members-names {
+  padding: 0;
+  margin: 5px 0;
+}
+
+.group-members-names li {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  height: 42px;
+  background-color: rgb(72, 72, 72);
+  color: var(--color-grey);
+  border-radius: 6px;
+  font-size: 16px;
+  padding-left: 14px;
+
 }
