--- a/CSS/createNewGroup.css
+++ b/CSS/createNewGroup.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .new-group-form {
@@ -53,7 +54,7 @@
   border-radius: 6px;
   font-size: 16px;
   padding-left: 14px;
-  margin-top: 5px;
+  margin-top: 8px;
 }
 
 .new-group-member::placeholder  {
@@ -75,8 +76,10 @@
     background-color: #f0f0f0;
 }
 
-.create-new-group {
+.create-new-group {
   padding: 20px;
+  margin: 0 auto;
+  display: block;
 }
 
 .dropdown-list {
@@ -84,13 +87,26 @@
 }
 
 .dropdown-option {
-  padding: 8px;
+  width: 100%;
+  height: 50px;
   cursor: pointer;
   background-color: rgb(72, 72, 72);
-  width: 90%;
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  border-radius: 0 5px 5px 0;
 }
 
-.dropdown-option:hover {
+.option-container:first-child {
+  border-radius: 5px 5px 0 0;
+  padding-top: 3px;
+}
+
+.option-container:last-child {
+  border-radius: 0 0 5px 5px;
+}
+
+.option-container:hover {
   background-color: rgb(162, 162, 162);
 }
 
@@ -103,16 +119,60 @@
   list-style: none;
   display: flex;
   align-items: center;
-  height: 42px;
   background-color: rgb(72, 72, 72);
   color: var(--color-grey);
   border-radius: 6px;
   font-size: 16px;
-  padding: 14px;
-  margin-bottom: 8px;
+  padding-right: 14px;
+  margin: 8px 0;
 }
 
-.listItemContainer {
+.list-item-container {
   display: flex;
   justify-content: space-between;
+}
+
+.list-item-user {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.create-new-group-message {
+  padding: 10px 0;
+  text-align: center;
+  color: red;
+}
+
+.dropdown-option-image,
+.found-user-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 5px 0 0 5px
+}
+
+.option-container {
+  display: flex;
+  padding-bottom: 8px;
+}
+
+.hidden {
+  display: none;
+}
+
+.go-to-my-groups {
+  position: absolute;
+  top: 15px;
+  right: 16px;
+  padding: 20px;
+}
+
+.logged-in-user-on-list {
+
+}
+
+.new-member {
+  flex-grow: 1;
+  padding-left: 10px;
 }
