--- a/CSS/myGroups.css
+++ b/CSS/myGroups.css
@@ -8,7 +8,7 @@
   margin: 0;
 }
 
-.create-team {
+.create-group {
   margin: 20px 0;
   width: 100%;
 }
@@ -21,6 +21,7 @@
 .group {
   background-color: var(--color-black);
   padding: 20px;
+  margin-bottom: 20px;
   text-align: left;
 }
 
