Added new root color

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,7 @@
   --color-white: rgb(255, 255, 255);
   --color-black: rgb(0, 0, 0);
   --color-grey: rgb(158, 158, 158);
+  --color-red: rgb(219, 64, 64);
   --color-background: rgb(24, 24, 24);
   --color-nav: rgb(12, 12, 12);
 }
