--- a/CSS/group.css
+++ b/CSS/group.css
@@ -1,20 +1,11 @@
 .profile-heading-bg {
-  background-image: url('../images/bg-profile.png');
+  background-image: url('../images/bg-stage.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 35vh;
-  padding: 120px 20px;
-}
-
-.profile-heading-bg::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  height: 45vh;
+  padding: 110px 20px;
+  text-align: center;
 }
 
 .profile-heading-bg h2,
@@ -25,10 +16,16 @@
 
 .group-container {
   height: 100vh;
+  overflow-y: auto;
+  padding-bottom: 84px;
 }
 
 .group-name {
   margin-top: 0;
+}
+
+.button-leave {
+  padding-bottom: 50px;
 }
 
 .user-perfomance {
@@ -42,12 +39,17 @@
   color: var(--color-grey);
 }
 
-.group-rank {
+.group-text {
   background-color: var(--color-background);
-  height: 65vh;
+  height: auto;
   padding: 20px;
 }
 
-.group-rank h3 {
+.group-text h3 {
   margin: 0 0 10px 0;
+}
+
+.button-history {
+  width: 95%;
+  margin: 40px auto;
 }
