--- a/CSS/group.css
+++ b/CSS/group.css
@@ -53,3 +53,11 @@
   width: 95%;
   margin: 40px auto;
 }
+
+.rank-user-image {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  margin: 0 10px;
+  border-radius: 10px;
+}
