--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,6 +1,10 @@
 .profilePageWrapper{
-    padding: 20px;
     box-sizing: border-box;
+    background-color: var(--color-background);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 0.6fr 1fr;
 }
 .profileButtons{
     display: flex;
@@ -14,23 +18,31 @@
     cursor:default;
 }
 .profilePicture{
-    width: 25vw;
-    height: 25vw;
+    margin-top: 30px;
+    width: 26vw;
+    height: 26vw;
     border-radius: 15px;
     background-position: center;
     background-size: cover;
 }
 .backgroundPictureProfile{
+    padding: 10px;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)),url('../images/bg-profile.png');
+    background-position: center;
+    background-size: cover;
 }
+
 .settingsContainer{
+    padding: 40px 20px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
+   
 }
 .inputBox{
     display: flex;
@@ -65,7 +77,9 @@
 .inputOrder1{
     grid-row: 3;
 }
-
+.profileContent{
+    grid-row: 2/span 4;
+}
 .inputOrder2{
     grid-row: 5;
 }
@@ -74,12 +88,47 @@
     grid-row: 7;
     color: rgb(151, 16, 16);
 }
+.settingsErrorMessagePP{
+    font-size: 12px;
+    grid-row: 6;
+    color: rgb(151, 16, 16);
+}
 .profilePictureFormButton{
     background-color: rgb(29, 29, 29);
     width: 100%;
     padding: 10px;
     border-radius: 5px;
+    grid-row: 7;
+}
+.profilePictureButton{
+    background-color: rgb(43, 43, 43);
+    width: 60%;
+    padding:16px;
+    border-radius: 5px;
+    grid-row: 7;
+    text-align: center;
+}
+#profilePictureForm{
+    grid-row: 2/ span 8;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr 0.5fr 1.5fr 1.5fr 1fr;
+}
+.PPlabel{
+    grid-row: 2/span 2;
+    align-self: center;
 }
 .changePicture{
-    
+    grid-row: 4;
+}
+.logoutButton {
+    background-color: rgba(15, 15, 15, 0);
+    text-decoration: underline;
+    width: 15%;
+    text-align: center;
+    border-radius: 10px;
+    grid-row: 7;
+    padding: 0 20px;
+}
+.userInfo{
+    padding-left: 6px;
 }
