--- a/CSS/index.css
+++ b/CSS/index.css
@@ -79,11 +79,15 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border: solid 1px var(--color-white);
 }
 
 .inputContent {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .popup-cross {
