--- a/CSS/stickyNav.css
+++ b/CSS/stickyNav.css
@@ -1,3 +1,4 @@
+/* mobile portrait */
 .sticky-nav {
   height: 84px;
   width: 100%;
@@ -28,6 +29,49 @@
   padding-bottom: 5px;
 }
 
+.nav-icon {
+  color: var(--color-grey);
+}
+
 .nav-icon-name {
   margin: 3px;
+  color: var(--color-grey);
+}
+
+.app-logo {
+  display: none;
+  color: var(--color-grey);
+}
+
+/* tablet portrait */
+@media only screen and (min-width: 600px) {
+  .sticky-nav {
+    height: 100%;
+    width: 84px;
+  }
+
+  .sticky-nav ul {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    position: relative;
+  }
+
+  .logoutButton {
+    margin-left: 50px;
+  }
+
+  .app-logo {
+    display: inline;
+    font-size: 40px;
+    position: absolute;
+    top: 27px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .sticky-nav ul {
+    gap: 80px;
+  }
 }
