--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -32,7 +32,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)),url('../images/bg-profile.png');
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)),url('../images/bg-stage-2.png');
     background-position: center;
     background-size: cover;
 }
@@ -42,7 +42,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-   
+
 }
 .inputBox{
     display: flex;
