--- a/CSS/awardInfoPage.css
+++ b/CSS/awardInfoPage.css
@@ -1,5 +1,5 @@
 #awardInfoContainerAIPage {
-    height: 100%;
+   /*height: 100%;*/
     min-width: 375px;
     background-color: black;
     box-sizing: border-box;
