--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -1,9 +1,14 @@
+/* mobile portrait */
 .welcome-container {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     overflow: hidden;
     padding: 20px;
+}
+
+.goldenbet {
+  display: none;
 }
 
 .blurred-background {
@@ -54,4 +59,49 @@
     background-color: rgb(11, 19, 18);
     padding: 20px;
     margin-bottom: -20px;
+}
+
+.tablet-welcome-buttons {
+    display: none;
+}
+
+/* tablet portrait */
+@media only screen and (min-width: 600px) {
+    .web-title {
+        display: none;
+    }
+
+    .welcome-buttons {
+        display: none;
+    }
+
+    .tablet-welcome-buttons {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin: 100px 0;
+    }
+
+    .welcome-container {
+        position: inherit;
+    }
+
+    .blurred-background {
+        filter: none;
+        transform: none;
+    }
+
+    .welcome-text {
+        background-color: var(--color-background);
+        width: 35%;
+        height: 100%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 30px;
+    }
+}
+
+@media only screen and (min-width: 600px) and (orientation: portrait) {
+
 }
