--- a/CSS/register.css
+++ b/CSS/register.css
@@ -1,3 +1,6 @@
+.registerBackground{
+    height: 100%;
+}
 .registerPageWrapper {
     background: linear-gradient(rgb(33, 61, 86), rgb(0, 0, 0));
     height: 100%;
@@ -42,4 +45,43 @@ main {
 
 .registerErrorMessage {
     color: rgb(151, 16, 16);
+}
+@media only screen and (min-width: 1200px) {
+   .registerBackground{
+        
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+       position: relative;
+       margin: 0;
+       padding: 0;
+   }
+   .registerPageWrapper{
+        width: 28vw;
+        background: linear-gradient(rgb(30, 30, 30), rgb(30, 30, 30));
+        z-index: 1;
+   }
+   .alreadyAccount {
+        align-self: center;
+    }
+    .b{
+        background-image: linear-gradient(to top, rgba(30, 30, 30, 1), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent),url('../images/bg-welcome.png');
+        background-size: cover;
+        background-position: center;
+        filter: blur(5px);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+}
+@media only screen and (min-width: 600px) and (max-width: 1199px) {
+    .registerPageWrapper{
+        width: 28vw;
+        background: linear-gradient(rgb(201, 17, 17), rgb(30, 30, 30));
+        z-index: 1;
+   }
 }
