--- a/CSS/register.css
+++ b/CSS/register.css
@@ -14,7 +14,9 @@
 main {
     height: 100vh;
 }
-
+.logoRegister{
+    display: none;
+}
 .registerTextContainer p {
   color: var(--color-grey);
 }
@@ -48,7 +50,6 @@ main {
 }
 @media only screen and (min-width: 1200px) {
    .registerBackground{
-        
         height: 100%;
         width: 100%;
         display: flex;
@@ -57,6 +58,12 @@ main {
        margin: 0;
        padding: 0;
    }
+   .logoRegister{
+        display:block;
+        position: absolute;
+        top: 3vw;
+        left: 3vw;
+    }
    .registerPageWrapper{
         width: 28vw;
         background: linear-gradient(rgb(30, 30, 30), rgb(30, 30, 30));
@@ -77,11 +84,52 @@ main {
         left: 0;
         z-index: -1;
     }
+    body{
+        background-color: rgba(30, 30, 30, 1);
+        margin: 0%;
+        padding: 0%;
+    }
+
 }
 @media only screen and (min-width: 600px) and (max-width: 1199px) {
     .registerPageWrapper{
-        width: 28vw;
-        background: linear-gradient(rgb(201, 17, 17), rgb(30, 30, 30));
+        width: 50vw;
+        height: 50vh;
+        background: linear-gradient(rgb(30, 30, 30), rgb(30, 30, 30));
         z-index: 1;
    }
+   .logoRegister{
+        display:block;
+        position: absolute;
+        top: 10%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+   .registerBackground{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        margin: 0;
+        padding: 0;
+    }
+   .b{
+        background-image: linear-gradient(to top, rgba(30, 30, 30, 1), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent),url('../images/bg-welcome.png');
+        background-size: cover;
+        background-position: center;
+        filter: blur(5px);
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+    }
+    body{
+        background-color: rgba(30, 30, 30, 1);
+        margin: 0%;
+        padding: 0%;
+    }
 }
