--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     background-color: var(--color-background);
     width: 100%;
-    height: 100%;
+    
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 0.6fr 1fr;
 }
@@ -45,7 +45,7 @@
     border-bottom: 2px solid rgb(43, 43, 43);
 }
 .settingsContainer{
-    padding: 40px 20px;
+    padding: 40px 0px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -85,6 +85,10 @@
 }
 .profileContent{
     grid-row: 2/span 4;
+    padding: 20px;
+}
+.myBetsWrapper{
+
 }
 .inputOrder2{
     grid-row: 5;
@@ -107,7 +111,7 @@
 .chosenAward{
     text-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
     color: var(--color-orange);
-    box-shadow: -6px 5px 5px 0 rgba(255, 165, 0, 0.5);
+    box-shadow: 0px 5px 5px 0 rgba(255, 165, 0, 0.5);
     border-bottom: 2px solid var(--color-orange);
 }
 .betContainer{
@@ -143,12 +147,21 @@
 .logoutButton {
     background-color: rgba(15, 15, 15, 0);
     text-decoration: underline;
-    width: 15%;
-    text-align: center;
-    border-radius: 10px;
-    grid-row: 7;
-    padding: 0 20px;
+ 
 }
 .userInfo{
     padding-left: 6px;
 }
+@media only screen and (min-width: 1200px){
+    .profilePageWrapper{
+        padding-left: 8%;
+        box-sizing: border-box;
+    }
+}
+@media only screen and (min-width: 600px) and (max-width: 1199px){
+    .profilePageWrapper{
+        padding-left: 14%;
+        box-sizing: border-box;
+    }
+}
+
