--- a/CSS/createNewGroup.css
+++ b/CSS/createNewGroup.css
@@ -30,6 +30,7 @@
   font-size: 30px;
   width: 60%;
   text-transform: none;
+  color: rgb(222, 222, 222);
 }
 
 .new-group-name::placeholder {
@@ -42,7 +43,8 @@
 }
 
 .fa-plus {
-  color: var(--color-white);
+  color: rgb(158, 158, 158);
+  margin-right: 10px;
 }
 
 .new-group-member {
@@ -52,12 +54,12 @@
   align-items: center;
   width: 100%;
   height: 42px;
-  background-color: rgb(72, 72, 72);
   color: var(--color-grey);
   border-radius: 6px;
   font-size: 16px;
   padding-left: 14px;
   margin-top: 8px;
+  border: solid 1px rgb(114, 114, 114);
 }
 
 .new-group-member::placeholder  {
@@ -87,7 +89,6 @@
 
 .dropdown-list {
   margin-top: 5px;
-  /* height: 65px; */
 }
 
 .dropdown-list-height {
@@ -100,20 +101,10 @@
   width: 100%;
   height: 50px;
   cursor: pointer;
-  background-color: rgb(72, 72, 72);
   display: flex;
   align-items: center;
   padding-left: 10px;
-  border-radius: 0 5px 5px 0;
-}
-
-.option-container:first-child {
-  border-radius: 5px 5px 0 0;
-  padding-top: 3px;
-}
-
-.option-container:last-child {
-  border-radius: 0 0 5px 5px;
+  color: rgb(158, 158, 158);
 }
 
 .option-container:hover {
@@ -166,7 +157,13 @@
 
 .option-container {
   display: flex;
-  padding-bottom: 8px;
+  background-color: rgb(36, 36, 36);
+  border-radius: 0 5px 5px 0;
+}
+
+.option-container{
+  border-radius: 5px;
+  margin-bottom: 5px;
 }
 
 .hidden {
@@ -183,6 +180,7 @@
 .new-member {
   flex-grow: 1;
   padding-left: 10px;
+  color: rgb(158, 158, 158);
 }
 
 .closeCreateGroup {
@@ -190,6 +188,11 @@
     position: absolute;
     right: 20px;
     top: 20px;
+}
+
+.fa-minus {
+  margin-right: 10px;
+  color: rgb(158, 158, 158);
 }
 
 /* tablet portrait */
