--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,4 +1,5 @@
 :root {
+  --color-main: rgb(222, 222, 222);
   --color-white: rgb(255, 255, 255);
   --color-black: rgb(0, 0, 0);
   --color-grey: rgb(158, 158, 158);
@@ -11,7 +12,7 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
-  color: var(--color-white);
+  color: var(--color-main);
 }
 
 body {
