--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,13 +10,20 @@
 
 :root {
   --color-main: rgb(222, 222, 222);
-  --color-white: rgb(255, 255, 255);
-  --color-black: rgb(0, 0, 0);
+  --color-white: #DEDEDE;
+  --color-black: #0E0E0E;
+  --color-grey-1: #3C3C3C;
+  --color-grey-2: #484848;
+  --color-grey-3: #727272;
+  --color-grey-4: #9e9e9e;
+  --color-grey-5: #DEDEDE;
   --color-grey: rgb(158, 158, 158);
   --color-orange: rgb(252, 197, 146);
-  --color-red: rgb(219, 64, 64);
-  --color-background: rgb(24, 24, 24);
-  --color-nav: rgb(12, 12, 12);
+  --color-accent-1: #FCC592;
+  --color-red: #B45B5B;
+  --color-green: #529454;
+  --color-background: #2B2B2B;
+  --color-nav: #0C0C0C;
 }
 
 * {
@@ -128,7 +135,7 @@ button {
 }
 
 .btn-main:hover {
-  background-color: darkgray;
+  background-color: rgb(48, 48, 48);
 }
 
 .shown {
