--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -4,7 +4,7 @@
     width: 100%;
     
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 0.6fr 1fr;
+    grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr;
 }
 .profileButtons{
     display: flex;
@@ -18,23 +18,37 @@
     cursor:default;
 }
 .profilePicture{
-    margin-top: 30px;
-    width: 26vw;
-    height: 26vw;
+    margin-top: 20px;
+    width: 11vh;
+    aspect-ratio: 1/1;
     border-radius: 15px;
     background-position: center;
     background-size: cover;
+    justify-self: center;
+    align-self: center;
 }
 .backgroundPictureProfile{
-    padding: 10px;
+    padding: 20px;
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)),url('../images/bg-stage-2.png');
+    background-position: center;
+    background-size: cover;
+}
+.profilePicAndName {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0.4), rgba(0,0,0,0.8)),url('../images/bg-stage-2.png');
-    background-position: center;
-    background-size: cover;
+}
+.profileName{
+    justify-self: center;
+    align-self: center;
+}
+.myBets{
+    padding: 10px 0px;
 }
 .awardsWrapper{
     display: flex;
@@ -42,10 +56,11 @@
 .betButton{
     flex-grow:1;
     text-align: center;
-    border-bottom: 2px solid rgb(43, 43, 43);
+    border-bottom: 3px solid rgb(43, 43, 43);
+    padding: 10px;
 }
 .settingsContainer{
-    padding: 40px 0px;
+    padding: 10px 0px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -55,7 +70,6 @@
     display: flex;
     align-content: flex-end;
     justify-content: flex-end;
-    border-bottom: 2px solid black;
 }
 .editBox{
     width: 100%;
@@ -87,9 +101,7 @@
     grid-row: 2/span 4;
     padding: 20px;
 }
-.myBetsWrapper{
 
-}
 .inputOrder2{
     grid-row: 5;
 }
@@ -112,10 +124,11 @@
     text-shadow: 0 0 10px rgba(255, 165, 0, 0.5);
     color: var(--color-orange);
     box-shadow: 0px 5px 5px 0 rgba(255, 165, 0, 0.5);
-    border-bottom: 2px solid var(--color-orange);
+    border-bottom: 3px solid var(--color-orange);
 }
 .betContainer{
     border-bottom: 2px solid rgb(43, 43, 43);
+    padding: 10px;
 }
 .profilePictureFormButton{
     background-color: rgb(29, 29, 29);
@@ -145,23 +158,27 @@
     grid-row: 4;
 }
 .logoutButton {
-    background-color: rgba(15, 15, 15, 0);
-    text-decoration: underline;
- 
+    background-color: rgb(24, 24, 24);
+    border-radius: 7px;
+    padding: 10px 20px;
+    align-self: flex-end;
 }
 .userInfo{
     padding-left: 6px;
 }
-@media only screen and (min-width: 1200px){
+@media only screen and (min-width: 600px){
     .profilePageWrapper{
         padding-left: 8%;
         box-sizing: border-box;
     }
 }
-@media only screen and (min-width: 600px) and (max-width: 1199px){
+@media only screen and (min-width: 600px) and (orientation: portrait){
     .profilePageWrapper{
         padding-left: 14%;
         box-sizing: border-box;
+    }
+    .profilePicAndName{
+        align-self: flex-start;
     }
 }
 
