--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -79,18 +79,28 @@
 }
 .settingsInput{
     width: 100%;
+    box-sizing: border-box;
+    border: 1px solid rgb(43, 43, 43);
+    padding: 8px;
 }
+
 .settingsButtonsContainer{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 .settingsButton{
     background-color: rgb(29, 29, 29);
     width: 100%;
     padding: 10px;
     border-radius: 5px;
-
+    font-size: 14px;
+}
+.settingsLabel{
+    width: 100%;
+    text-align: left;
 }
 .inputContent{
     display: flex;
@@ -99,9 +109,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-}
-.inputOrder1{
-   
+    gap: 10px;
 }
 .profileContent{
     grid-row: 2/span 4;
