--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -207,6 +207,14 @@
         align-self: flex-start;
         display: flex;
         flex-direction: row;
+        justify-self: baseline;
+    }
+    .profileName{
+        display: flex;
+        align-self: flex-end;
+        margin: 0 15px;  /* Remove margin (spacing) on the bottom */
+        padding-bottom: 0;
+        font-size: 42px;
     }
 }
 @media only screen and (min-width: 600px) and (orientation: portrait){
@@ -220,7 +228,9 @@
     }
     .profilePicAndName{
         align-self: flex-start;
-        flex-direction: column;
+        display: flex;
+        flex-direction: row;
+        justify-self: baseline;
     }
     .settingsButton{
         padding: 16px;
