--- a/CSS/home.css
+++ b/CSS/home.css
@@ -9,7 +9,7 @@
 
 .home-container {
     background-color: #181818;
-    height: 190vh;
+    height: auto;
 }
 
 .home-welcome {
@@ -24,7 +24,11 @@
     font-family: Sora SemiBold;
 }
 
-
+.awardHeader{
+    padding-top: 60px;
+    color: rgb(201, 134, 73);
+    font-size: 20pt;
+}
 
 .home-welcome p {
     color: var(--color-grey);
@@ -49,8 +53,9 @@
 }
 
 .countdown {
-    padding: 40px 30px;
+    padding:5px 30px 20vh 30px;
     box-sizing: border-box;
+    background-color: #181818;
 }
 
 .awardCountdown {
@@ -63,6 +68,14 @@
 
 .timers h3 {
     margin-top: 0;
+}
+
+.betHeader{
+    font-size: 16pt;;
+}
+.betChoice{
+    font-size: 14pt;
+    color: rgb(158, 158, 158);
 }
 
 .days div,
@@ -91,6 +104,7 @@
 
     .bg-home {
         height: 45vh;
+        background-image: linear-gradient(to bottom, #18181846, #181818), url('../images/bg-home.jpg');
     }
 
     .home-container {
@@ -100,13 +114,13 @@
     .countdownTimers {
         display: flex;
         justify-content: center;
-        gap: 40px;
+        gap: 25px;
     }
 
     .oscars-grammys {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 40px;
+        gap: 25px;
         flex-grow: 2;
     }
 
@@ -116,6 +130,10 @@
     .arrow{
         display: none;
     }
+    .awardHeader{
+        padding-top: 0px;
+    }
+    
 }
 
 @media only screen and (min-width: 600px) and (orientation: portrait) {
@@ -137,9 +155,13 @@
         flex-direction: column;
     }
     .countdownTimers>.timers>.awardCountdown:first-of-type {
-        gap: 80px;
+        gap: 50px;
     }
     .arrow{
         display: none;
+    }
+    .countdown {
+        padding:5px 25vw 20vh 30px;
+
     }
 }
