--- a/CSS/register.css
+++ b/CSS/register.css
@@ -1,21 +1,14 @@
 /* mobile portrait */
-.register-bg {
-  background: linear-gradient(rgb(33, 61, 86), rgb(0, 0, 0));
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
 .register-page {
-    padding: 30px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+  padding: 30px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 main {
-    height: 100vh;
+  height: 100vh;
 }
 
 .register-welcome p {
@@ -23,78 +16,74 @@ main {
 }
 
 .registration-form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .registration-form input {
-    border: none;
-    border-bottom: 1px solid var(--color-grey);
-    margin: 10px 0;
-    padding-bottom: 10px;
+  border: none;
+  border-bottom: 1px solid var(--color-grey);
+  margin: 10px 0;
+  padding-bottom: 10px;
 }
 
 .registerBox {
-    width: 100%;
-    border: none;
-    border-bottom: solid 1px black;
+  width: 100%;
+  border: none;
+  border-bottom: solid 1px black;
 }
 
 .alreadyAccount {
-    align-self: end;
-    color: var(--color-grey);
-    text-align: center;
-    width: 100%;
+  align-self: end;
+  color: var(--color-grey);
+  text-align: center;
+  width: 100%;
 }
 
 .registerErrorMessage {
-    color: rgb(151, 16, 16);
+  color: #DC4343;
+  padding-bottom: 30px;
 }
 
 /* tablet portrait */
 @media only screen and (min-width: 600px) {
-  .register-bg {
-    display: flex;
-    justify-content: space-between;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent),url('../images/bg-welcome.png');
-
+  .register-page {
+    background-color: #181818;
   }
 
-  .register-page {
-    background-color: var(--color-background);
-    padding: 180px 55px;
+  .blurred-background-register {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), transparent), linear-gradient(to bottom, rgba(30, 87, 153, 0.4), transparent),url('../images/bg-welcome.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(5px);
+    z-index: -1;
+    transform: scale(1.1);
   }
 }
 
 @media only screen and (min-width: 600px) and (orientation: portrait) {
-    .register-bg {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
+  .register-page {
+    flex-direction: column;
+    height: auto;
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 40px;
+  }
 
-    .register-page {
-        flex-direction: column;
-        height: auto;
-        width: 55vw;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: black;
-        padding: 30px;
-    }
+  .register-welcome {
+    width: 80%;
+    margin-bottom: 5vh;
+  }
 
-    .register-welcome {
-        width: 80%;
-        margin-bottom: 5vh;
-    }
-
-    .registration-form {
-        width: 80%;
-    }
-
-    .sendRegisterForm {
-        margin: 5vh 0;
-    }
+  .registration-form {
+    width: 80%;
+  }
 }
