--- a/CSS/myGroups.css
+++ b/CSS/myGroups.css
@@ -1,8 +1,9 @@
 /* mobile portrait */
-.page-my-groups {
+.groups-container {
   background-color: var(--color-background);
   height: 100vh;
-  padding: 30px;
+  padding: 60px 30px 100px;
+  overflow: scroll;
 }
 
 .page-my-groups h2 {
@@ -24,6 +25,7 @@
   padding: 20px;
   margin-bottom: 20px;
   text-align: left;
+  border-radius: 5px;
 }
 
 .group-info {
@@ -50,7 +52,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background: linear-gradient(178deg, rgba(0, 0, 0, 0.5) 0%, #181818 100%);
 }
 
 .popup {
@@ -65,13 +67,14 @@
 @media only screen and (min-width: 600px) {
   .groups-container {
     margin-left: 8%;
+    padding: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
   }
 
   .bg-group {
-    height: 35vh;
+    height: 34vh;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -89,7 +92,7 @@
   }
 
   .tablet-group-title-button button {
-    width: 20%;
+    width: 15%;
   }
 
   .groups-title-button {
@@ -100,6 +103,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2%;
+    margin: 20px;
   }
 
   .sticky-nav {
@@ -128,12 +132,11 @@
 
   .bg-group {
     background-size: initial;
-    background-position: left;
-    height: 25vh;
+    height: 30vh;
   }
 
   .tablet-group-title-button button {
-    width: 30%;
+    width: 20%;
   }
 
   .page-my-groups {
